# piano-painter

./: .gitignore  README.md  RELEASE.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
samples/: abide.pp  greensleeves.pp  mary.pp
scripts/: mid2pp.mjs  xml2pp.mjs
src/: App.css  App.tsx  constants.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/samples/: YmFzaWM6ZDpBIzI.pcm  YmFzaWM6ZDpBIzM.pcm  YmFzaWM6ZDpBIzQ.pcm  YmFzaWM6ZDpBIzU.pcm  YmFzaWM6ZDpBIzY.pcm  YmFzaWM6ZDpBMg.pcm  YmFzaWM6ZDpBMw.pcm  YmFzaWM6ZDpBNA.pcm  YmFzaWM6ZDpBNQ.pcm  YmFzaWM6ZDpBNg.pcm  YmFzaWM6ZDpCMg.pcm  YmFzaWM6ZDpCMw.pcm  YmFzaWM6ZDpCNA.pcm  YmFzaWM6ZDpCNQ.pcm  YmFzaWM6ZDpCNg.pcm  YmFzaWM6ZDpDIzI.pcm  YmFzaWM6ZDpDIzM.pcm  YmFzaWM6ZDpDIzQ.pcm  YmFzaWM6ZDpDIzU.pcm  YmFzaWM6ZDpDIzY.pcm  YmFzaWM6ZDpDMg.pcm  YmFzaWM6ZDpDMw.pcm  YmFzaWM6ZDpDNA.pcm  YmFzaWM6ZDpDNQ.pcm  YmFzaWM6ZDpDNg.pcm  YmFzaWM6ZDpDNw.pcm  YmFzaWM6ZDpEIzI.pcm  YmFzaWM6ZDpEIzM.pcm  YmFzaWM6ZDpEIzQ.pcm  YmFzaWM6ZDpEIzU.pcm  YmFzaWM6ZDpEIzY.pcm  YmFzaWM6ZDpEMg.pcm  YmFzaWM6ZDpEMw.pcm  YmFzaWM6ZDpENA.pcm  YmFzaWM6ZDpENQ.pcm  YmFzaWM6ZDpENg.pcm  YmFzaWM6ZDpFMg.pcm  YmFzaWM6ZDpFMw.pcm  YmFzaWM6ZDpFNA.pcm  YmFzaWM6ZDpFNQ.pcm  (+326 more)
src-tauri/src/: lib.rs  main.rs
src/canvas/: interaction.ts  renderer.ts  viewport.ts
src/components/: ClearWizard.tsx  CopyPasteWizard.tsx  PianoRollCanvas.tsx  Toolbar.tsx
src/engine/: audio.ts  generateAllSamples.ts  sampleCache.ts  scheduler.ts  transport.ts
src/state/: project.ts
src/tauri/: commands.ts
