[package]
name = "piano-painter"
version = "0.0.1"
description = "A piano roll sequencer"
authors = ["you"]
edition = "2021"

[lib]
name = "piano_painter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mp3lame-encoder = "0.2"
base64 = "0.22"
